Added tests & small fixes
